# serenity-wallet-bot

./: .env.sample  .gitignore  Cargo.toml  README.md  exosama.sqlite  kanaria-owners.csv
migrations/: 20220213154541_init.sql  20220306091342_signature.sql  20220319211541_rename_movr_to_glmr.sql  kanaria.sql  signature.sql
src/: data.rs  main.rs  wallet.rs
