[package]
name = "exosama_wallet_collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10.10", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "unstable_discord_api",
] }

tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
hex = "0.4.3"
sp-core = "5.0.0"
schnorrkel = "0.10.2"
ethereum-types = "0.13.1"
hex-literal = "0.3.4"
sqlx = { version = "0.5.7", features = ["runtime-tokio-rustls", "sqlite", "offline"] }